objects/SPM_Store__c.object
<CustomObject>
    <fields>
        <fullName>City__c</fullName>
        <description>City</description>
        <inlineHelpText>City</inlineHelpText>
        <label>City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <description>County</description>
        <inlineHelpText>County</inlineHelpText>
        <label>County</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPM_District__c</fullName>
        <description>SPM District</description>
        <inlineHelpText>SPM District</inlineHelpText>
        <label>SPM District</label>
        <referenceTo>SPM_District__c</referenceTo>
        <relationshipLabel>SPM Stores</relationshipLabel>
        <relationshipName>SPM_Stores</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>State</description>
        <inlineHelpText>State</inlineHelpText>
        <label>State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Store_Name__c</fullName>
        <description>Store Name</description>
        <inlineHelpText>Store Name</inlineHelpText>
        <label>Store Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Store_Phone_Number__c</fullName>
        <description>Store Phone Number</description>
        <inlineHelpText>Store Phone Number</inlineHelpText>
        <label>Store Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Store_eMail__c</fullName>
        <description>Enter Store eMail</description>
        <inlineHelpText>Enter Store eMail</inlineHelpText>
        <label>Store eMail</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Address__c</fullName>
        <description>Street Address</description>
        <inlineHelpText>Street Address</inlineHelpText>
        <label>Street Address</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zipcode__c</fullName>
        <description>Zipcode</description>
        <inlineHelpText>Zipcode</inlineHelpText>
        <label>Zipcode</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>